<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
     <TextView
        android:id="@+id/nom_de_la_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/nom_de_larticle"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nom_de_la_article_tbx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/entrer_le_nom_ici"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/ButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sauvgarder_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="SauveGarderButtonClick"
            android:text="@string/sauvegarder" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="AnnuleButtonClick"
            android:text="@string/annule" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/DeleteButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="DeleteButtonClick"
            android:text="@string/delete" />

    </LinearLayout>
    
</LinearLayout>
