<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nom_de_la_categorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        android:textSize="20dp"
        android:text="@string/nom_de_la_categorie" />

    <EditText
        android:id="@+id/nom_de_la_categorie_tbx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/entrer_le_nom_ici" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ajoute_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:onClick="AjouteButtonClick"
        android:text="@string/ajoute_une_categorie" />

</LinearLayout>
